[package]
name = "robin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hostname = "^0.3"
local-ip-address = "0.5.1"
serde = "1.0.136"
serde_json = "1.0.79"
mac_address = "1.1.4"


rusqlite = { version = "0.29.0", features = ["bundled"] }

